@@ -6,4 +6,4 @@ RUN mkdir /app
 
 COPY build/libs/*.jar /app/spring-boot-application.jar/
 
-ENTRYPOINT ["java", "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap", "-Djava.security.egd=file:/dev/./urandom","-jar","/app/spring-boot-application.jar"]
+CMD java -jar /app/spring-boot-application.jar/
